[package]
name = "twilight-relayer-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Twilight blockchain relayer operations and services"
license = "Apache-2.0"
repository = "https://github.com/twilight-project/twilight-relayer-sdk"
readme = "README.md"
keywords = ["blockchain", "crypto", "relayer", "twilight", "trading"]
categories = ["cryptography", "api-bindings"]


[lib]
name = "twilight_relayer_sdk"
path = "src/lib.rs"

#[[bin]]
#name = "twilight_relayer_sdk_bin"
#path = "src/bin.rs"

[profile.release]
debug = true

[dependencies]
curve25519-dalek = { version = "3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.1", features = ["wasm-bindgen"] }
clear_on_drop = { version = "0.2.4", features = ["no_cc"] }
rand = "0.7"
serde_json = "1.0.58"
serde_bytes = "0.11.9"
console_error_panic_hook = "0.1.6"
base64 = "*"
bincode = "1.3.3"
hex = "^0.3"
sha3 = "0.9.1"
subtle = "2"
criterion = { version = "0.3", features = ["html_reports"] }
lazy_static = "1.4.0"
dotenvy = "0.15.7"
log = "0.4.27"

[dependencies.zkvm]
git = "https://github.com/twilight-project/zkos-rust.git"
tag = "v0.0.1"

[dependencies.utxo-in-memory]
git = "https://github.com/twilight-project/zkos-rust.git"
tag = "v0.0.1"

[dependencies.transaction]
git = "https://github.com/twilight-project/zkos-rust.git"
tag = "v0.0.1"

[dependencies.transactionapi]
git = "https://github.com/twilight-project/zkos-rust.git"
tag = "v0.0.1"

[dependencies.twilight-client-sdk]
git = "https://github.com/twilight-project/twilight-client-sdk.git"
tag = "v0.0.1"

[dependencies.zkschnorr]
git = "https://github.com/twilight-project/zk-schnorr.git"
tag = "Testnet-v1.0.0"

[dependencies.quisquis-rust]
git = "https://github.com/twilight-project/quisquis-rust.git"
tag = "Testnet-v1.0.0"

[dependencies.address]
git = "https://github.com/twilight-project/zkos-rust.git"
tag = "v0.0.1"
